--- a/Ch02_AnacondaJupyterLab.ipynb
+++ b/Ch02_AnacondaJupyterLab.ipynb
@@ -129,9 +129,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "daa379d4-3604-42fd-bcfa-5ac724b13c26",
+   "metadata": {},
+   "source": [
+    "## ▷ 기타 : Notebook를 PDF 파일로 만들기\n",
+    "#### > Notebook 선택\n",
+    "#### > 메뉴: File > Print 선택\n",
+    "#### > Print : 상단 '프린트' 선택에서 'Microsoft Print to PDF' 선택\n",
+    "#### > 하단에 '인쇄'를 선택하여\n",
+    "#### > PDF 파일을 저장할 디렉토리 선택 \n",
+    "#### > PDF 파일명 지정 후 '저장(S)' 선택"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d6d82a-2268-409a-8825-82552a495100",
+   "id": "7e216c23-df4d-417c-89fc-08c38bcf4a8b",
    "metadata": {},
    "outputs": [],
    "source": []
