--- a/Ch04_DataFrame.ipynb
+++ b/Ch04_DataFrame.ipynb
@@ -5,7 +5,10 @@
    "id": "14d554b7-940d-43ed-9b42-22ee61169af4",
    "metadata": {},
    "source": [
-    "# ▩ 외장 Pandas 자료형\n",
+    "----\n",
+    "# **▩ Ch04 데이터 프레임(Data Frame) 자료 다루기**\n",
+    "----\n",
+    "#### > 외장 Pandas 자료형\n",
     "#### > pandas라는 패키지를 import 해서 사용 가능한 추가 자료 구조\n",
     "#### > Data Type : series, dataframe\n",
     "#### > 관련 함수 : Series(), DataFrame()"
@@ -16,7 +19,7 @@
    "id": "a24e0568-0964-4aeb-972d-890ec7b229d1",
    "metadata": {},
    "source": [
-    "# ㅇ시리즈(Series) 형\n",
+    "# **ㅇ시리즈(Series) 형**\n",
     "#### > 1차원 배열로 여러 값을 나열한 자료 구조\n",
     "#### > 각 데이터 항목은 index로 식별된다.\n",
     "#### > 데이터 프레임의 데이터을 구성하는 열 값들을 시리즈로 추출하여 조작할 수 있다.\n",
@@ -57,7 +60,7 @@
    "id": "4cc06708-3fde-42ec-8930-3f1729a3e680",
    "metadata": {},
    "source": [
-    "# ㅇ데이터 프레임(Data Frame) 형 \n",
+    "# **ㅇ데이터 프레임(Data Frame) 형**\n",
     "#### > 행과 열로 나열되는  2차원적 자료 구조\n",
     "#### > 행과 열 값들은 딕셔너리 구조를 활용하여 초기화 한다.\n",
     "#### > 하나의 열 값들은 시리즈형으로 추출하여 사용 가능하다.\n",
@@ -524,7 +527,7 @@
    "id": "1db07dbf-d85e-41d9-b9d2-b0b992b1e831",
    "metadata": {},
    "source": [
-    "## 데이터 추출 : loc[] 이용\n",
+    "## <> 데이터 추출 : loc[] 이용\n",
     "#### > loc[]는 데이터프레임에서 특정 행과 열을 선택하거나 조작하기 위한 인덱싱 방법 중 하나\n",
     "#### > loc[x:y] 숫자 index가 x 이상 ~ y 이하 행을 추출 >> iloc[x:y] x 이상 ~ y 미만 행을 추출"
    ]
@@ -884,7 +887,7 @@
    "id": "1d247ff2-617d-46f2-803e-36beeec12261",
    "metadata": {},
    "source": [
-    "## 데이터 추출 : iloc[] 이용\n",
+    "## <> 데이터 추출 : iloc[] 이용\n",
     "#### > iloc[]는 추출 전에 행과 열에 숫자 index를 지정하여 특정 행과 열을 선택하거나 조작하기 위한 인덱싱 방법 중 하나\n",
     "#### > loc[]와 달리 조전부 추출이 불가능\n",
     "#### > iloc[x:y] x 이상 ~ y 미만 행을 추출 >> loc[x:y] 숫자 index가 x 이상 ~ y 이하 행을 추출  "
@@ -1476,6 +1479,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d858b11-7946-4d2c-80cf-a7991345a787",
+   "metadata": {},
+   "source": [
+    "#### **데이터 정렬**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 107,
    "id": "1a136b79-7bd4-4027-b91d-32f8e239ddec",
@@ -1551,6 +1562,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b39569fe-35ef-4026-9c58-d2cacf89501a",
+   "metadata": {},
+   "source": [
+    "#### **컬럼명 변경**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 108,
    "id": "dc80f646-8d48-4f47-8e87-c40fbbef13a6",
@@ -1621,6 +1640,14 @@
     "## [Data Frame] 관련 함수 : 컬럼명 변경\n",
     "df = df.rename(columns = {'Mat' : 'Math'})         # 컬럼명 변경\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96cd2fb0-f5d0-41f5-8a50-ed654ae9aa16",
+   "metadata": {},
+   "source": [
+    "#### **행, 열 제거**"
    ]
   },
   {
@@ -1904,11 +1931,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50750b99-f2b8-4f24-b4ae-020c08e91b5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "389679e0-750f-451f-8224-b077d5845bd1",
    "metadata": {},
    "source": [
-    "# □ Excel이나 csv 타입 파일로부터 데이터 프레임 구성하기\n",
+    "# **□ Excel이나 csv 타입 파일로부터 데이터 프레임 구성하기**\n",
     "#### > import pandas 를 통해 read_excel() 또는 read_csv()를 사용한다.\n",
     "#### >> 데이터에 한글이나 특수 문자가 포함되어있는경우 encoding='UTF-8' 적용 "
    ]
@@ -2657,6 +2692,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f32919fc-026b-4f84-a5e3-f8a2de39631f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "5b1e3840-6322-490f-844d-f5cfee923810",
    "metadata": {},
@@ -2913,7 +2956,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51e3741f-0b14-40f2-88e9-0a80ef64c685",
+   "id": "608f3932-09a2-4ed2-b8ee-4bff54598894",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c7b9004-c260-4db4-b814-647ca0a3d327",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## **정리하기**\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "528588f8-55ec-4967-beb5-46afc489f2d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. 데이터 프레임 만들기\n",
+    "df = pd.DataFrame({'name'    : ['김지훈', '이유진', '박동현', '김민지'],\n",
+    "                   'english' : [90, 80, 60, 70],\n",
+    "                   'math'    : [50, 60, 100, 20]})\n",
+    "\n",
+    "df_midterm = pd.DataFrame({'english' : [90, 80, 60, 70],\n",
+    "                           'math'    : [50, 60, 100, 20],\n",
+    "                           'nclass'  : [1, 1, 2, 2]}) \n",
+    "\n",
+    "# 2.외부 데이터 이용하기\n",
+    "\n",
+    "# 엑셀 파일 불러오기\n",
+    "df_exam = pd.read_excel('excel_exam.xlsx')\n",
+    "\n",
+    "# CSV 파일 불러오기\n",
+    "df_csv_exam = pd.read_csv('exam.csv')\n",
+    " \n",
+    "# CSV 파일로 저장하기\n",
+    "df_midterm.to_csv('output_newdata.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "082c00ee-dac0-4c91-a09c-4e2010207381",
    "metadata": {},
    "outputs": [],
    "source": []
