--- a/Ch06_DataHandling.ipynb
+++ b/Ch06_DataHandling.ipynb
@@ -5,7 +5,9 @@
    "id": "43b2848e-92ee-47e3-96bd-d0eb51b045b8",
    "metadata": {},
    "source": [
-    "# ▩ Ch06 데이터 전처리\n",
+    "----\n",
+    "# **▩ Ch06 데이터 전처리**\n",
+    "----\n",
     "#### > 데이터 전처리(preprocessing)는 데이터 분석에 적절하게 데이터를 가공하는 작업\n"
    ]
   },
@@ -14,7 +16,7 @@
    "id": "b9bba533-342d-48e8-ae41-777ae762400d",
    "metadata": {},
    "source": [
-    "## [06-1] 데이터 전처리\n",
+    "## **[06-1] 데이터 전처리**\n",
     "#### > pandas 모듈을 가장 많이 사용"
    ]
   },
@@ -39,8 +41,8 @@
    "id": "93836e5c-7e88-4310-8d6a-078e5c23953b",
    "metadata": {},
    "source": [
-    "## [06-2] 조건에 맞는 데이터만 추출하기\n",
-    "### > query()로 행 추출"
+    "## **[06-2] 조건에 맞는 데이터만 추출하기**\n",
+    "#### > query()로 행 추출"
    ]
   },
   {
@@ -284,7 +286,7 @@
    "id": "d6ff51f4-0573-4c06-a315-d75be7cc63af",
    "metadata": {},
    "source": [
-    "### [] 조건에 맞는 데이터만 추출하기\n",
+    "### **[] 조건에 맞는 데이터만 추출하기**\n",
     "#### > query('필터링_조건식')을 사용"
    ]
   },
@@ -580,7 +582,7 @@
    "id": "1877cb56-ddb5-41f5-b3e2-8869fcb441c0",
    "metadata": {},
    "source": [
-    "### [] 초과, 미만, 이상, 이하 조건 걸기"
+    "### **[] 초과, 미만, 이상, 이하 조건 걸기**"
    ]
   },
   {
@@ -731,7 +733,7 @@
    "id": "1eac7a1d-93ba-48c0-a912-e4b424be67cd",
    "metadata": {},
    "source": [
-    "### [] 여러 조건을 충족하는 행 추출하기"
+    "### **[] 여러 조건을 충족하는 행 추출하기**"
    ]
   },
   {
@@ -944,7 +946,7 @@
    "id": "5d8c2453-d56b-4b63-b5b8-974f0d040141",
    "metadata": {},
    "source": [
-    "### [] 리스트에 해당하는 행 추출하기"
+    "### **[] 리스트에 해당하는 행 추출하기**"
    ]
   },
   {
@@ -1274,7 +1276,7 @@
    "id": "90e83cb2-8982-4651-b8bb-9596c04b3731",
    "metadata": {},
    "source": [
-    "### [] 추출한 행으로 데이터 만들기"
+    "### **[] 추출한 행으로 데이터 만들기**"
    ]
   },
   {
@@ -1330,7 +1332,7 @@
    "source": [
     "---\n",
     "\n",
-    "### (알아 두면 좋아요) 외부 변수를 이용해 추출하기"
+    "### **(알아 두면 좋아요) 외부 변수를 이용해 추출하기**"
    ]
   },
   {
@@ -1423,12 +1425,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "015ec689-7fbd-4f01-b916-e56c95d8d238",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9c01616d-65d5-4485-a3bd-1f58f433c767",
    "metadata": {},
    "source": [
     "---------\n",
-    "## [06-3] 필요한 변수만 추출하기"
+    "## **[06-3] 필요한 변수만 추출하기**"
    ]
   },
   {
@@ -1436,7 +1446,7 @@
    "id": "fadef4b8-bf25-4984-9a18-ca43fdc6d65c",
    "metadata": {},
    "source": [
-    "### [] 변수로 추출하기"
+    "### **[] 변수로 추출하기**"
    ]
   },
   {
@@ -1485,7 +1495,7 @@
    "id": "73f761ef-ab1d-406f-b3ce-5cd65eabd891",
    "metadata": {},
    "source": [
-    "### > 단일 변수로 추출하면 결과는 Serise형"
+    "#### > 단일 변수로 추출하면 결과는 Serise형"
    ]
   },
   {
@@ -1515,7 +1525,7 @@
    "id": "4f7edb27-826f-4c27-976e-485a87a46e74",
    "metadata": {},
    "source": [
-    "### [] 변수 나열(list)로 추출하기"
+    "### **[] 변수 나열(list)로 추출하기**"
    ]
   },
   {
@@ -1713,7 +1723,7 @@
    "id": "0af052c6-d77d-4edf-bf94-570dc2715741",
    "metadata": {},
    "source": [
-    "### > 복수 개 변수로 추출하면 결과는 Data Frame형"
+    "#### > 복수 개 변수로 추출하면 결과는 Data Frame형"
    ]
   },
   {
@@ -1766,9 +1776,7 @@
    "id": "9dd288e0-a1cd-455b-8704-118805be901c",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "### [] 컬럼 변수 제거하고 추출하기\n",
+    "### **[] 컬럼 변수 제거하고 추출하기**\n",
     "#### > 변수(열)을 제거하고 추출하므로 데이터 프레임에는 영향을 주지 않음"
    ]
   },
@@ -2157,7 +2165,7 @@
    "id": "5e1a49ca-5e37-462a-a736-ed891f83c839",
    "metadata": {},
    "source": [
-    "### [] pandas 함수 조합하기"
+    "### **[] pandas 함수 조합하기**"
    ]
   },
   {
@@ -2165,7 +2173,7 @@
    "id": "78fe5368-5c05-4de4-ad07-38bf5f864372",
    "metadata": {},
    "source": [
-    "### <> `query()`와 `[]` 조합하기"
+    "#### **<> `query()`와 `[]` 조합하기**"
    ]
   },
   {
@@ -2407,7 +2415,7 @@
    "id": "22ad2ea4-2118-4792-9ddb-8e74d7ee2f09",
    "metadata": {},
    "source": [
-    "### <> 가독성 있게 코드 줄 바꾸기"
+    "### **<> 가독성 있게 코드 줄 바꾸기**"
    ]
   },
   {
@@ -2494,13 +2502,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a085a1e2-b31c-4dbe-a983-4ddfda8062b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "7f637278-3ce3-48b7-bf3d-a462409bbe5e",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "## [06-4] 순서대로 정렬하기"
+    "----\n",
+    "## **[06-4] 순서대로 정렬하기**"
    ]
   },
   {
@@ -2508,7 +2523,7 @@
    "id": "5255b2d5-a197-43e6-803b-d760e9d76b7f",
    "metadata": {},
    "source": [
-    "### [] 오름차/내림차 순으로 정렬하여 추출하기\n",
+    "### **[] 오름차/내림차 순으로 정렬하여 추출하기**\n",
     "#### > 추출을 하므로 대상 데이터 프레임에 영향을 주지않는다."
    ]
   },
@@ -3449,7 +3464,7 @@
    "source": [
     "------------------------------------------------------------------------\n",
     "\n",
-    "## [06-5] 파생변수 추가하기"
+    "## **[06-5] 파생변수 추가하기**"
    ]
   },
   {
@@ -3457,7 +3472,7 @@
    "id": "917a5246-8f49-4c2e-9688-01c733a88456",
    "metadata": {},
    "source": [
-    "### [] 파생변수 추가하기\n",
+    "### **[] 파생변수 추가하기**\n",
     "#### > 파생 변수(derived variable)는 기존 속성들로부터 새롭게 만들어낸 변수 "
    ]
   },
@@ -3720,7 +3735,7 @@
    "id": "7d3b7836-7d04-44b8-bae8-7143a9d55673",
    "metadata": {},
    "source": [
-    "### [] 여러 파생변수 한 번에 추가하기"
+    "### **[] 여러 파생변수 한 번에 추가하기**"
    ]
   },
   {
@@ -4004,7 +4019,7 @@
    "id": "15b93dbc-108a-4802-8496-625cdb1d195f",
    "metadata": {},
    "source": [
-    "### [] `df.assign()`에 `np.where()` 적용하기\n",
+    "### **[] `df.assign()`에 `np.where()` 적용하기**\n",
     "#### > import numpy as np 후 사용 \n",
     "#### >    np.where(조건식, True 시 실행문, False 시 실행문)"
    ]
@@ -4269,7 +4284,7 @@
    "metadata": {},
    "source": [
     "---------\n",
-    "### [실습 6-1] exam 데이터 프레임에 'total'과 'mean', 'result' 파생변수가 추가된 df 데이터 프레임을 생성하시오.\n",
+    "### **[실습 6-1] exam 데이터 프레임에 'total'과 'mean', 'result' 파생변수가 추가된 df 데이터 프레임을 생성**\n",
     "#### > 'total'은 과목의 합계\n",
     "#### > 'mean'은 전체 과목의 평균\n",
     "#### > 'result'는 'mean' >= 60 이면 'pass', 아니면 'fail' "
@@ -4381,7 +4396,7 @@
    "metadata": {},
    "source": [
     "-------------------\n",
-    "### [] lamda 함수를 활용한 이름 줄여쓰기"
+    "### **[] lamda 함수를 활용한 이름 줄여쓰기**"
    ]
   },
   {
@@ -4911,7 +4926,8 @@
    "id": "ed5708fd-f76f-4b42-8f78-4fa58faf568c",
    "metadata": {},
    "source": [
-    "### <> lamda 함수?\n",
+    "----\n",
+    "### **<> lamda 함수?**\n",
     "#### >>함수객체를 반환하는 함수\n",
     "#### >> return문이 필요없는 함수\n",
     "#### >> 간단한 함수를 선언하면서, 바로 실행돠도록 하는 용도로도 사용"
@@ -5478,7 +5494,7 @@
    "metadata": {},
    "source": [
     "----\n",
-    "## [06-6] 집단별로 요약하기"
+    "## **[06-6] 집단별로 요약하기**"
    ]
   },
   {
@@ -5486,7 +5502,7 @@
    "id": "d549fee9-c00f-4e88-a6f0-868d15fe507c",
    "metadata": {},
    "source": [
-    "### [] 집단 요약하기\n",
+    "### **[] 집단 요약하기**\n",
     "#### > 단일 통계값을 구하기\n",
     "#### > agg() : 대상 변수에 대해 단일 통계값을 구해줌\n",
     "#### >> agg(변수명 = (대상_변수명, 적용할_함수명))\n",
@@ -5607,7 +5623,7 @@
    "id": "342e9eab-03ea-4c47-a6eb-387e67cae33f",
    "metadata": {},
    "source": [
-    "### [] 집단별로 요약하기\n",
+    "### **[] 집단별로 요약하기**\n",
     "#### > 집단별로 통계값을 구하기\n",
     "#### > groupby() : 집단별로 통계값을 구해줌\n",
     "#### >> groupby(집단구분_변수명).agg(변수명 = (대상_변수명, 적용할_함수명))"
@@ -5698,8 +5714,7 @@
    "id": "3a0fe06f-8d25-4acd-9618-e68403ed2771",
    "metadata": {},
    "source": [
-    "------------------------------------------------------------------------\n",
-    "### <> 변수를 인덱스로 바꾸지 않기"
+    "### **<> 변수를 인덱스로 바꾸지 않기**"
    ]
   },
   {
@@ -5787,8 +5802,7 @@
    "id": "ace24995-6a46-40ac-9d5d-093c64c8d9a1",
    "metadata": {},
    "source": [
-    "---------\n",
-    "### [실습 6-2] 'nclass'별 인원 수 구하기\n",
+    "### **[실습 6-2] 'nclass'별 인원 수 구하기**\n",
     "#### > 결과 데이터 프레임에는 'nclass'와 'count'가 나타나도록 한다."
    ]
   },
@@ -5878,8 +5892,7 @@
    "id": "5a0d6c7a-1b9c-443b-851f-e4f867b0c019",
    "metadata": {},
    "source": [
-    "------------------------------------------------------------------------\n",
-    "### [] 여러 요약 통계량 한 번에 구하기"
+    "### **[] 여러 요약 통계량 한 번에 구하기**"
    ]
   },
   {
@@ -5993,8 +6006,7 @@
    "id": "2eb8eead-96f2-4841-80a5-eedf6fa07636",
    "metadata": {},
    "source": [
-    "---\n",
-    "### [] 모든 변수의 요약 통계량 한 번에 구하기"
+    "### **[] 모든 변수의 요약 통계량 한 번에 구하기**"
    ]
   },
   {
@@ -6102,7 +6114,7 @@
    "id": "870c097e-ab76-469b-ac87-204760a15fae",
    "metadata": {},
    "source": [
-    "### [] 집단별로 다시 집단 나누기"
+    "### **[] 집단별로 다시 집단 나누기**"
    ]
   },
   {
@@ -6428,7 +6440,7 @@
    "id": "aa51bbfe-4f77-497c-9f13-f22ae6d0f74e",
    "metadata": {},
    "source": [
-    "### [] 원하는 집단만 통계 전에 필터링 하기"
+    "### **[] 원하는 집단만 통계 전에 필터링 하기**"
    ]
   },
   {
@@ -6505,7 +6517,7 @@
    "id": "a34df639-faf9-4ad0-bb2c-72ebc4e72912",
    "metadata": {},
    "source": [
-    "### [] 원하는 집단만 통계 후에 필터링 하기"
+    "### **[] 원하는 집단만 통계 후에 필터링 하기**"
    ]
   },
   {
@@ -6596,7 +6608,7 @@
    "metadata": {},
    "source": [
     "-----------------\n",
-    "## [실습 6-2] 원하는 통계 결과만 필터링 하여 구하기\n",
+    "### **[실습 6-2] 원하는 통계 결과만 필터링 하여 구하기**\n",
     "#### > mpg 데이터에서 'drv'별로 빈도 수를 구한 다음에\n",
     "#### > 빈도 수가 100 초과인 것말 구하기"
    ]
@@ -6872,7 +6884,7 @@
    "metadata": {},
    "source": [
     "------------------------\n",
-    "## [06-7] 데이터 합치기"
+    "## **[06-7] 데이터 합치기**"
    ]
   },
   {
@@ -6880,8 +6892,8 @@
    "id": "42a09f79-04d3-4dbe-a7b1-4ddfba1736e8",
    "metadata": {},
    "source": [
-    "## [] 가로로 합치기(열 합치기) : merge()\n",
-    "### : 프레임을 가로 방향으로 합쳐지면서, 프레임에 열 변수를 합하는 기능\n",
+    "### **[] 가로로 합치기(열 합치기) : merge()**\n",
+    "#### : 프레임을 가로 방향으로 합쳐지면서, 프레임에 열 변수를 합하는 기능\n",
     "#### > left: 병합할 첫 번째 데이터프레임\n",
     "#### > right: 병합할 두 번째 데이터프레임\n",
     "#### > how: 병합 방식, 다음 중 하나를 선택\n",
@@ -7379,7 +7391,7 @@
    "metadata": {},
    "source": [
     "-----------\n",
-    "### [실습] Outer Join\n",
+    "### **[실습] Outer Join**\n",
     "#### name 프레임을 nclass = 1을 빼고 생성한 후에,\n",
     "#### exam과 name 프레임을 Outer Join 수행"
    ]
@@ -7721,7 +7733,7 @@
    "metadata": {},
    "source": [
     "-------------------\n",
-    "## [] 세로로 합치기(행/열 합치기) : concat()\n",
+    "### **[] 세로로 합치기(행/열 합치기) : concat()**\n",
     "### : 프레임을 세로 방향으로 합치지면서, 프레임에 행 변수를 합하는 기능\n",
     "#### > objs: 연결할 데이터프레임(리스트, 튜플)\n",
     "#### > axis: 연결 방향\n",
@@ -8102,7 +8114,7 @@
    "metadata": {},
    "source": [
     "-------------------\n",
-    "## [실습 6-3] 데이터 행, 열 분리 및 병합\n",
+    "### **[실습 6-3] 데이터 행, 열 분리 및 병합**\n",
     "#### <1> exam 데이터 프레임에 'total', 'mean' 파생변수 추가하기\n",
     "#### <2> exam_mean 데이터 프레임 만들기\n",
     "#### <2-1> exam_new 데이터 프레임에서  'id', 'nclass', 'total', 'mean' 변수를 추출하여 exam_mean 만들기\n",
@@ -8213,9 +8225,204 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b244491e-b2a4-4b4b-b0f3-9ed0f14c17de",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### **정리하기**\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1900a5e6-890e-40a9-9b19-ebb9602a8a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##사전 데이터 준비\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "exam = pd.read_csv('exam.csv')\n",
+    "mpg = pd.read_csv('mpg.csv')\n",
+    "test1 = pd.DataFrame({'id'      : [1, 2, 3, 4, 5], 'midterm' : [60, 80, 70, 90, 85]})\n",
+    "test2 = pd.DataFrame({'id'    : [1, 2, 3, 4, 5], 'final' : [70, 83, 65, 95, 80]})\n",
+    "group_a = pd.DataFrame({'id'   : [1, 2, 3, 4, 5], 'test' : [60, 80, 70, 90, 85]})\n",
+    "group_b = pd.DataFrame({'id'   : [6, 7, 8, 9, 10], 'test' : [70, 83, 65, 95, 80]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "24195b10-16a8-4856-a84f-63b9a1da3f39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  test\n",
+       "0   1    60\n",
+       "1   2    80\n",
+       "2   3    70\n",
+       "3   4    90\n",
+       "4   5    85\n",
+       "0   6    70\n",
+       "1   7    83\n",
+       "2   8    65\n",
+       "3   9    95\n",
+       "4  10    80"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 1. 조건에 맞는 데이터만 추출하기\n",
+    "exam.query('english <= 80')\n",
+    "\n",
+    "# 여러 조건 동시 충족\n",
+    "exam.query('nclass == 1 & math >= 50')\n",
+    "\n",
+    "# 여러 조건 중 하나 이상 충족\n",
+    "exam.query('math >= 90 | english >= 90')\n",
+    "exam.query('nclass in [1, 3, 5]')\n",
+    "\n",
+    "\n",
+    "## 2. 필요한 변수만 추출하기\n",
+    "exam['math']                                 # 한 변수 추출\n",
+    "exam[['nclass', 'math', 'english']]          # 여러 변수 추출\n",
+    "exam.drop(columns = 'math')                  # 변수 제거\n",
+    "exam.drop(columns = ['math', 'english'])     # 여러 변수 제거\n",
+    "\n",
+    "\n",
+    "## 3. pandas 명령어 조합하기\n",
+    "exam.query('math >= 50')[['id', 'math']].head()\n",
+    "\n",
+    "\n",
+    "## 4. 순서대로 정렬하기\n",
+    "exam.sort_values('math')                     # 오름차순 정렬\n",
+    "exam.sort_values('math', ascending = False)  # 내림차순 정렬\n",
+    "\n",
+    "# 여러 변수 기준 정렬\n",
+    "exam.sort_values(['nclass', 'math'], ascending = [True, False])\n",
+    "\n",
+    "\n",
+    "## 5. 파생변수 추가하기\n",
+    "exam.assign(total = exam['math'] + exam['english'] + exam['science'])\n",
+    "\n",
+    "# 여러 파생변수 한 번에 추가하기\n",
+    "exam.assign(total = exam['math'] + exam['english'] + exam['science'],\n",
+    "            mean = (exam['math'] + exam['english'] + exam['science']) / 3)\n",
+    "\n",
+    "# assign()에 np.where() 적용하기\n",
+    "exam.assign(test = np.where(exam['science'] >= 60, 'pass', 'fall'))\n",
+    "\n",
+    "# 추가한 변수를 pandas 코드에 바로 활용하기\n",
+    "exam.assign(total = exam['math'] + exam['english'] + exam['science']) \\\n",
+    "    .sort_values('total') \\\n",
+    "    .head()\n",
+    "\n",
+    "\n",
+    "## 6. 집단별로 요약하기\n",
+    "exam.groupby('nclass') \\\n",
+    "    .agg(mean_math = ('math', 'mean'))\n",
+    "\n",
+    "# 각 집단별로 다시 집단 나누기\n",
+    "mpg.groupby(['manufacturer', 'drv']) \\\n",
+    "   .agg(mean_cty = ('cty', 'mean'))\n",
+    "\n",
+    "\n",
+    "## 7. 데이터 합치기\n",
+    "pd.merge(test1, test2, how = 'left', on = 'id')  # 가로로 합치기\n",
+    "pd.concat([group_a, group_b])                    # 세로로 합치기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f34b6cae-5ca4-4f75-9cef-1a03a9f6f00a",
+   "id": "3e259900-d91b-443c-a5c1-ed92893508d4",
    "metadata": {},
    "outputs": [],
    "source": []
