--- a/Ch02_AnacondaJupyterLab.ipynb
+++ b/Ch02_AnacondaJupyterLab.ipynb
@@ -104,7 +104,8 @@
    "source": [
     "## ▷ Jupyter Lab 실행 [A]\n",
     "#### > 시작 메뉴에서 : Anaconda Prompt 실행\n",
-    "#### >> Prompt 명령창에서 'jupyter lab' 으로 입력하여 실행"
+    "#### >> 'D:'로 드라이브 이동\n",
+    "#### >> 'jupyter lab' 으로 실행"
    ]
   },
   {
