--- a/Ch03_PythonReview.ipynb
+++ b/Ch03_PythonReview.ipynb
@@ -1650,6 +1650,36 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3325d42e-2243-4b12-955c-6ad61195948b",
+   "metadata": {},
+   "source": [
+    "## **[] Python Coding 연습**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce0913a-580e-4025-ac3b-c7fdc2cfef65",
+   "metadata": {},
+   "source": [
+    "### **[Coding] 숫자 야구 게임**\n",
+    "#### 랜덤한 3자리 숫자 맞추기 게임을 완성하시오.\n",
+    "#### > 랜덤한 3자리 정수 발생, 단 각 자리 수의 값은 같으면 안됨\n",
+    "#### > 게이머는 추측하는 3자리 값을 키보드로 입력 (맞출 떄까지)\n",
+    "#### > 각 위치(digit)에서 값이 같으면 Strike, 값은 존재하나 위치가 다르면 Ball로 처리\n",
+    "#### > 매회 “>>%d Strike, %d Ball”로 결과 제공\n",
+    "#### > 게임 종료 조건 : 3 Strike 또는 입력 값 00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f0f7ee2-9e26-4af6-a1bd-682bb39e86ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
