--- a/Ch03_PythonReview.ipynb
+++ b/Ch03_PythonReview.ipynb
@@ -203,27 +203,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "38d39316-3fdb-4547-87c6-3d5a40bea44d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['hello', 'world!']"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.split(', ')            # ['Hello', 'World!']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 127,
    "id": "2c1f0116-8ea6-4f7b-943b-6383abc1f6a8",
    "metadata": {},
@@ -368,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "id": "f671ff70-c7fd-49e8-8900-5935615b00b2",
    "metadata": {},
    "outputs": [
@@ -385,7 +364,7 @@
        "[1, 2, 'a', 'b']"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 3,
    "id": "6208aa04-6983-44e2-a8b0-92b3e4c7563c",
    "metadata": {},
    "outputs": [
@@ -531,7 +510,7 @@
        "<AxesSubplot:ylabel='count'>"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -903,9 +882,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a1a55af-da10-49d5-9df1-07fc9b5636bc",
+   "metadata": {},
+   "source": [
+    "### **[연습] Turtle 모듈 활용**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9999d447-0675-4a40-a8a9-ab4fcbcaf94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import turtle as t\n",
+    "\n",
+    "t.shape('turtle')\n",
+    "t.forward(100)\n",
+    "t.left(90)\n",
+    "\n",
+    "t.exitonclick()  # 실행 창을 닫지 않도록"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9999d447-0675-4a40-a8a9-ab4fcbcaf94c",
+   "id": "d0950f35-c384-4e35-8161-62617226bc66",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1656,7 +1659,7 @@
    "id": "3325d42e-2243-4b12-955c-6ad61195948b",
    "metadata": {},
    "source": [
-    "## **[] Python Coding 연습**"
+    "## **[실습] Python Coding 연습**"
    ]
   },
   {
