--- a/Ch17_DataStructure.ipynb
+++ b/Ch17_DataStructure.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "f671ff70-c7fd-49e8-8900-5935615b00b2",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "fd9f1eb0-c53e-4520-a73b-bd25be532146",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "[1, 2, 'A', 'b']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,27 +398,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "b06eee62-89d3-4b0b-9bfd-3312c5175aa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 'a', 'b', 'c']"
+       "[0, 1, 2, 3, 4, 5, 6, 6]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## 생성 및 조작\n",
-    "a.append('c')        #맨 마지막에 'c'를 추가     \n",
-    "a.insert(2, 3)       #2번째에 값 3을 추가\n",
-    "a.remove(3)          #3을 찾아 제거\n",
-    "a.index('a')         #'a'의 위치 값 반환\n",
+    "a = [6, 1, 0, 3, 4, 5, 6]\n",
+    "a.append(2)        #맨 마지막에 2를 추가     \n",
+    "a.insert(2, 9)       #2번째에 값 9를 추가\n",
+    "a.remove(9)          #3을 찾아 제거\n",
+    "a.index(0)         #'a'의 위치 값 반환\n",
+    "a.sort(reverse=False) #오름차순으로 정렬\n",
     "a"
    ]
   },
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "8a233b9d-c44a-4609-af1d-b4f5186af3cb",
    "metadata": {},
    "outputs": [
@@ -446,7 +448,7 @@
        "[1, 2, 3, 5, 7, 8]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,6 +458,29 @@
     "a = [5, 3, 7, 8, 2, 1]\n",
     "asort = sorted(a)    # 값들을 정렬\n",
     "asort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ff14b5ab-9c3a-4928-928e-7feb6f46eed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 7, 8]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [5, 3, 7, 8, 2, 1]\n",
+    "a.sort()\n",
+    "a"
    ]
   },
   {
