--- a/Ch03_PythonReview.ipynb
+++ b/Ch03_PythonReview.ipynb
@@ -203,111 +203,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "2c1f0116-8ea6-4f7b-943b-6383abc1f6a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'HELLO, WORLD!'"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.upper()             # 'HELLO, WORLD!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "id": "bb58711b-e9ab-4575-b2ad-5eedbc261f02",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello, world!'"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.capitalize()        # 'Hello, world!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "e094ca29-bd8a-4ae4-93fe-72aca43e3275",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello, World!'"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.title()             # 'Hello, World!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "id": "b61e532c-8040-4252-bbbe-198e9ec5e3cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hello, world!!!'"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.replace('!', '!!!')    # 'Hello, World!!!'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "id": "6c56156b-28a5-4748-88c2-48a66d7d4e77",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c.find(',')              # 5"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 132,
    "id": "fdef6d59-c023-493e-9031-cae239bb010d",
    "metadata": {},
@@ -906,9 +801,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b709e22-29b7-4c3b-b4ef-a36acd7d7d1a",
+   "metadata": {},
+   "source": [
+    "### **[Coding] Turtle 모듈 활용 n각형 그리기**\n",
+    "#### >> import turtle 모듈을 활용\n",
+    "#### >> 키보드로 turtle이 그릴 n각형의 n을 입력받는다.\n",
+    "#### >> 함수 호출을 통해 원하는 n각형을 그린다. \n",
+    "#### >> n이 2이하가 입력되면 작업을 종료한다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0950f35-c384-4e35-8161-62617226bc66",
+   "id": "e0e6d289-21ac-4643-8180-64a0077c9b9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dce0913a-580e-4025-ac3b-c7fdc2cfef65",
+   "metadata": {},
+   "source": [
+    "### **[Coding] 숫자 야구 게임**\n",
+    "#### 랜덤한 3자리 숫자 맞추기 게임을 완성하시오.\n",
+    "#### > 랜덤한 3자리 정수 발생, 단 각 자리 수의 값은 같으면 안됨\n",
+    "#### > 게이머는 추측하는 3자리 값을 키보드로 입력 (맞출 떄까지)\n",
+    "#### > 각 위치(digit)에서 값이 같으면 Strike, 값은 존재하나 위치가 다르면 Ball로 처리\n",
+    "#### > 매회 “>>%d Strike, %d Ball”로 결과 제공\n",
+    "#### > 게임 종료 조건 : 3 Strike 또는 입력 값 00"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39860e08-f0ec-42fb-8f3f-56e91327137b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1650,36 +1579,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ed8acd2-3f33-4b68-ab6d-ba084d4015f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3325d42e-2243-4b12-955c-6ad61195948b",
-   "metadata": {},
-   "source": [
-    "## **[실습] Python Coding 연습**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dce0913a-580e-4025-ac3b-c7fdc2cfef65",
-   "metadata": {},
-   "source": [
-    "### **[Coding] 숫자 야구 게임**\n",
-    "#### 랜덤한 3자리 숫자 맞추기 게임을 완성하시오.\n",
-    "#### > 랜덤한 3자리 정수 발생, 단 각 자리 수의 값은 같으면 안됨\n",
-    "#### > 게이머는 추측하는 3자리 값을 키보드로 입력 (맞출 떄까지)\n",
-    "#### > 각 위치(digit)에서 값이 같으면 Strike, 값은 존재하나 위치가 다르면 Ball로 처리\n",
-    "#### > 매회 “>>%d Strike, %d Ball”로 결과 제공\n",
-    "#### > 게임 종료 조건 : 3 Strike 또는 입력 값 00"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f0f7ee2-9e26-4af6-a1bd-682bb39e86ea",
    "metadata": {},
    "outputs": [],
    "source": []
