--- a/Ch17_DataStructure.ipynb
+++ b/Ch17_DataStructure.ipynb
@@ -159,7 +159,8 @@
    "id": "f6da35dd-d72d-4bb3-84c9-aacff057456c",
    "metadata": {},
    "source": [
-    "### **<> 데이터 타입 바꾸기**"
+    "### **<> 데이터 타입 바꾸기**\n",
+    "#### > int(), float(), str(), bool()"
    ]
   },
   {
@@ -331,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99b3b982-2293-49dc-b6ff-178ced40b88e",
+   "id": "65778e7d-136b-4276-ad4d-8e0b154d2118",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -406,6 +407,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2cc8d8db-7c2d-40a6-aa44-e4cdc706af26",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### > 패킹(Packing)과 언패킹(Unpacking)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "c2f6d15a-3cbc-4060-8978-277648ec12e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 ['a', 'b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 패킹(Packing), 언패킹(Unpacking)\n",
+    "b = [1, 2, ['a', 'b']]     #패킹(Packing)  \n",
+    "x, y, z = b                #언패킹(Unpacking)  \n",
+    "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "101790f9-18f3-4175-be3d-4e1855364826",
    "metadata": {},
    "source": [
@@ -441,7 +473,8 @@
    "metadata": {},
    "source": [
     "### **관련 메서드**\n",
-    "#### > append() 항목 값 추가하기\n",
+    "#### > append() 항목 값 마지막에 추가하기\n",
+    "#### > pop() 마지막 항목 값 제거하면서 반환\n",
     "#### > remove() 항목 값으로 제거하기\n",
     "#### > insert(index, value) index로 항목 추가하기\n",
     "#### > index() 항목 값으로 index 값 얻기\n",
@@ -450,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "id": "b06eee62-89d3-4b0b-9bfd-3312c5175aa6",
    "metadata": {},
    "outputs": [
@@ -460,7 +493,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 6]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,6 +506,35 @@
     "a.remove(9)           #3을 찾아 제거\n",
     "a.index(0)            #'a'의 위치 값 반환\n",
     "a.sort(reverse=False) #오름차순으로 정렬\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "b1e3c1f5-d706-40fc-885c-30bc4ea8bb82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(a.pop())\n",
     "a"
    ]
   },
@@ -622,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "id": "8a7e7428-251c-4b23-af18-cc9296adbcd4",
    "metadata": {},
    "outputs": [
@@ -632,7 +694,7 @@
        "[0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "id": "a3f3c705-a1ca-4454-ae8a-5cc8769abc3d",
    "metadata": {},
    "outputs": [
@@ -681,7 +743,7 @@
        "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,6 +804,46 @@
     "    arr.append(temp)   #1차원 리스트에 열 추가\n",
     "arr"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2248cff1-6325-43d5-a4ce-551b6cab6e28",
+   "metadata": {},
+   "source": [
+    "### **[실습-0] 4행4열 리스트 초기화하기**\n",
+    "#### > 0부터 시작되는 일련번호 값으로 초기화하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "de17594b-6d5c-49e4-93f9-7533df176576",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2, 3], [4, 5, 6, 7], [8, 9, 10, 11], [12, 13, 14, 15]]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 2차원 리스트 초기화\n",
+    "row, col = 4, 4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ab78ad-1b02-4fbd-bbf8-f4d174d5bf60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1157,14 +1259,16 @@
   {
    "cell_type": "markdown",
    "id": "7d0d7295-eaa0-456c-9bf2-44169aad733f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "#### **<> 튜플의 패킹(Packing)과 언패킹(Unpacking)**"
+    "#### > 패킹(Packing)과 언패킹(Unpacking)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 99,
    "id": "003e66a1-b464-4961-8bb7-a665731b7f36",
    "metadata": {},
    "outputs": [
@@ -1177,10 +1281,9 @@
     }
    ],
    "source": [
-    "## 튜플(Tuple) 형 : ( ) \n",
     "## 패킹(Packing), 언패킹(Unpacking)\n",
     "b = 10, 20, 30    #튜플의 패킹(Packing)  \n",
-    "x, y, z = b       #튜플의 언패킹(Unpacking)  \n",
+    "x, y, z = b       #언패킹(Unpacking)  \n",
     "print(x, y, z)"
    ]
   },
@@ -1830,10 +1933,10 @@
    },
    "source": [
     "## **ㅇ시리즈(Series) 형**\n",
+    "#### > pandas 패키지를 통해 사용한다.\n",
     "#### > **1차원** 배열로 여러 값을 나열한 자료 구조\n",
     "#### > 각 데이터 항목은 index로 식별된다.\n",
-    "#### > 데이터 프레임의 데이터을 구성하는 열 값들을 시리즈로 추출하여 조작할 수 있다.\n",
-    "#### > pandas 패키지를 통해 사용할 수 있다."
+    "#### > 데이터 프레임의 데이터을 구성하는 열 값들을 시리즈로 추출하여 조작할 수 있다."
    ]
   },
   {
@@ -1846,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 101,
    "id": "41f3dfe4-c7d5-41ad-8304-b0cf0f6452a9",
    "metadata": {},
    "outputs": [
@@ -1860,7 +1963,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1899,6 +2002,27 @@
     "## index 지정 생성하기\n",
     "b = pd.Series([11, 22, 33, 44], index = [1, 2, 3, 4])  #index 강제 부여\n",
     "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "1219a299-43e1-4a6f-b1b6-e6e1c64fc46a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
    ]
   },
   {
@@ -2143,8 +2267,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "id": "d32a7809-b5df-4112-bcd1-4d75a481088f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11    1\n",
+       "22    1\n",
+       "33    1\n",
+       "44    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## pandas 함수 활용\n",
+    "a = pd.Series([11, 22, 33, 44])  #index 자동 부여\n",
+    "a.value_counts()  #항목별 분포 수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "5a0d75a6-42ec-4a2a-96e3-bee171409021",
    "metadata": {},
    "outputs": [
     {
@@ -2153,15 +2304,12 @@
        "110"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## pandas 함수 활용\n",
-    "a = pd.Series([11, 22, 33, 44])  #index 자동 부여\n",
-    "a.value_counts()  #항목별 분포 수\n",
     "a.sum()    #항목의 합"
    ]
   },
