--- a/Ch06_DataHandling.ipynb
+++ b/Ch06_DataHandling.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2d761571-c1b2-4d13-ba4c-1312fb876217",
    "metadata": {},
    "outputs": [
@@ -120,155 +120,20 @@
        "      <td>80</td>\n",
        "      <td>65</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>89</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>80</td>\n",
-       "      <td>90</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>90</td>\n",
-       "      <td>78</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>98</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>50</td>\n",
-       "      <td>98</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>45</td>\n",
-       "      <td>85</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>13</td>\n",
-       "      <td>4</td>\n",
-       "      <td>46</td>\n",
-       "      <td>98</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>14</td>\n",
-       "      <td>4</td>\n",
-       "      <td>48</td>\n",
-       "      <td>87</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>75</td>\n",
-       "      <td>56</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>58</td>\n",
-       "      <td>98</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>17</td>\n",
-       "      <td>5</td>\n",
-       "      <td>65</td>\n",
-       "      <td>68</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>80</td>\n",
-       "      <td>78</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>19</td>\n",
-       "      <td>5</td>\n",
-       "      <td>89</td>\n",
-       "      <td>68</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>20</td>\n",
-       "      <td>5</td>\n",
-       "      <td>78</td>\n",
-       "      <td>83</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id  nclass  math  english  science\n",
-       "0    1       1    50       98       50\n",
-       "1    2       1    60       97       60\n",
-       "2    3       1    45       86       78\n",
-       "3    4       1    30       98       58\n",
-       "4    5       2    25       80       65\n",
-       "5    6       2    50       89       98\n",
-       "6    7       2    80       90       45\n",
-       "7    8       2    90       78       25\n",
-       "8    9       3    20       98       15\n",
-       "9   10       3    50       98       45\n",
-       "10  11       3    65       65       65\n",
-       "11  12       3    45       85       32\n",
-       "12  13       4    46       98       65\n",
-       "13  14       4    48       87       12\n",
-       "14  15       4    75       56       78\n",
-       "15  16       4    58       98       65\n",
-       "16  17       5    65       68       98\n",
-       "17  18       5    80       78       90\n",
-       "18  19       5    89       68       87\n",
-       "19  20       5    78       83       58"
+       "   id  nclass  math  english  science\n",
+       "0   1       1    50       98       50\n",
+       "1   2       1    60       97       60\n",
+       "2   3       1    45       86       78\n",
+       "3   4       1    30       98       58\n",
+       "4   5       2    25       80       65"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +143,7 @@
     "# 실습용 데이터 프레임 생성\n",
     "import pandas as pd\n",
     "exam = pd.read_csv('exam.csv')\n",
-    "exam"
+    "exam.head()"
    ]
   },
   {
