--- a/Ch06_DataHandling.ipynb
+++ b/Ch06_DataHandling.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "2d761571-c1b2-4d13-ba4c-1312fb876217",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "4   5       2    25       80       65"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "288312f0-0e24-415e-82c2-782a34891dfd",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1286,7 @@
        "46.25"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "486513ed-222c-40af-81ac-552ec2600519",
    "metadata": {},
    "outputs": [
@@ -1733,13 +1733,13 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = exam[['math']]  # 단일 변수로 추출하면 결과는 Serise형\n",
+    "x = exam[['math']]  # 단일 변수라도 []로 추출하면 결과는 Data Frame형\n",
     "type(x)"
    ]
   },
@@ -2438,6 +2438,27 @@
    "source": [
     "# nclass가 1인 행만 추출한 다음 english 추출\n",
     "exam.query('nclass == 1')['english']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f9b921f9-ff17-49f4-b656-24e762ab0106",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94.75"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exam.query('nclass == 1')['english'].mean()"
    ]
   },
   {
@@ -4686,7 +4707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "365c902f-c6e6-467c-964a-9b5108a2939e",
    "metadata": {},
    "outputs": [
@@ -4928,7 +4949,7 @@
        "19  20       5    78       83       58  219"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6214,7 +6235,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
+   "id": "5f347a10-0579-459b-8712-568c7871bff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>math</th>\n",
+       "      <th>english</th>\n",
+       "      <th>science</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nclass</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  math  english  science\n",
+       "nclass                            \n",
+       "1        4     4        4        4\n",
+       "2        4     4        4        4\n",
+       "3        4     4        4        4\n",
+       "4        4     4        4        4\n",
+       "5        4     4        4        4"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## exam.groupby('nclass')는 집단별 분리이므로 .count()가 가능\n",
+    "exam.groupby('nclass').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "0e0d7702-5331-4b62-afc0-3ff80bf29dad",
    "metadata": {},
    "outputs": [
@@ -6281,7 +6402,7 @@
        "5           78.00"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6598,6 +6719,106 @@
    "metadata": {},
    "source": [
     "### **[] 모든 변수의 요약 통계량 한 번에 구하기**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ec03c452-f0dd-4b03-b00f-3e8175dae39a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>math</th>\n",
+       "      <th>english</th>\n",
+       "      <th>science</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nclass</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  math  english  science\n",
+       "nclass                            \n",
+       "1        4     4        4        4\n",
+       "2        4     4        4        4\n",
+       "3        4     4        4        4\n",
+       "4        4     4        4        4\n",
+       "5        4     4        4        4"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## exam.groupby('nclass')는 집단별 분리이므로 .count()가 가능\n",
+    "exam.groupby('nclass').count()"
    ]
   },
   {
